[package]
name = "mdfmt"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.7"
textwrap = { version = "0.11", default_features = false }
structopt = "0.3"
auto_enums = "0.7"
itertools = "0.8"
